Update EqualsVerifier to 4.x